Add context menu

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 
 <body class="hidden">
 
+  <div id="context-menu" class="hidden">
+    <ul>
+      <li>Copy</li>
+      <li>Paste</li>
+    </ul>
+  </div>
+
   <header class="main-navigation">
     <div class="container nav-container">
       <h1 class="logo-heading">Fun Bus</h1>
